--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "start": "npm run dev",
     "lint": "eslint --ext .js,.vue src",
-    "build": "node build/build.js"
+    "build": "node build/build.js",
+    "deploy": "gh-pages -d dist -m deploy"
   },
   "dependencies": {
-    "vue": "^2.5.2",
+    "gh-pages": "^2.2.0",
+    "vue": "^2.6.0",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
@@ -70,5 +72,6 @@
     "> 1%",
     "last 2 versions",
     "not ie <= 8"
-  ]
+  ],
+  "homepage": "https://github.com/upxin/upxin.github.io/tou"
 }
